--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main id="main">
     <div id="video">
-        <img id="tirolesa" src="/media/feimily.jpg">      
+        <img id="tirolesa" src="media/feimily.jpg">      
         <!--<div class="capa1"></div>-->
     </div>
         <div id="titulo">
